# ros_ws_nmpc_Drone_ps

./: README.md
install/: local_setup.sh  setup.sh
install/microxrcedds_agent/lib/: libmicroxrcedds_agent.so.2.4.2  libmicroxrcedds_client.so.2.4.2
install/microxrcedds_agent/share/microxrcedds_agent/: package.sh
install/nmpc_core/lib/nmpc_core/: command_dispatcher.py  nmpc_core_CASADI.py  nmpc_trigger.py  sensor_processor.py  uORB_listener.py
install/nmpc_core/share/nmpc_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nmpc_core/share/nmpc_core/cmake/: nmpc_coreConfig-version.cmake  nmpc_coreConfig.cmake
install/nmpc_core/share/nmpc_core/environment/: ament_prefix_path.dsv  path.dsv
install/nmpc_core/share/nmpc_core/launch/: main.launch.py
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_nmpc_casadi/share/px4_nmpc_casadi/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: package.sh
log/: latest_build
src/nmpc_core/: CMakeLists.txt
src/nmpc_core/launch/: main.launch.py
src/nmpc_core/src/: command_dispatcher.py  nmpc_core_CASADI.py  nmpc_trigger.py  sensor_processor.py  uORB_listener.py
src/px4_nmpc_casadi/: setup.cfg  setup.py
(+3 files in other folders)
